--- a/AutoProjectTracker/AutoProjectTracker.csproj
+++ b/AutoProjectTracker/AutoProjectTracker.csproj
@@ -75,6 +75,12 @@
   <ItemGroup>
     <Compile Include="DataBaseHelper.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="MyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm.Designer.cs">
+      <DependentUpon>MyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Project.cs" />
     <Compile Include="ProjectForm.cs">
       <SubType>Form</SubType>
