--- a/AutoProjectTracker/AutoProjectTracker.csproj
+++ b/AutoProjectTracker/AutoProjectTracker.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -187,6 +187,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="AutoProjectTracker.sqlite" />
     <None Include="AutoProjectTracker_TemporaryKey.pfx" />
     <None Include="DESKTOP-BQF1NB9.json" />
     <None Include="packages.config" />
