--- a/AutoProjectTracker/AutoProjectTracker.csproj
+++ b/AutoProjectTracker/AutoProjectTracker.csproj
@@ -99,6 +99,12 @@
     <Compile Include="DataBaseHelper.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="AdminFunctionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminFunctionsForm.Designer.cs">
+      <DependentUpon>AdminFunctionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TaskHourForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,6 +160,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utility.cs" />
+    <EmbeddedResource Include="AdminFunctionsForm.resx">
+      <DependentUpon>AdminFunctionsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TaskHourForm.resx">
       <DependentUpon>TaskHourForm.cs</DependentUpon>
     </EmbeddedResource>
